--- a/app/src/main/res/layout/daily_component.xml
+++ b/app/src/main/res/layout/daily_component.xml
@@ -10,6 +10,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:textColor="@color/secondaryText"
         android:id="@+id/daily_week_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,6 +33,7 @@
 
 
     <TextView
+        android:textColor="@color/secondaryText"
         android:id="@+id/daily_max_temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,6 +42,7 @@
         tools:text="27°" />
 
     <TextView
+        android:textColor="@color/secondaryText"
         android:id="@+id/daily_min_temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,6 +51,7 @@
         tools:text="19°" />
 
     <TextView
+        android:textColor="@color/secondaryText"
         android:id="@+id/daily_humidity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
