--- a/app/src/main/res/layout/details_component.xml
+++ b/app/src/main/res/layout/details_component.xml
@@ -20,6 +20,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:textColor="@color/secondaryText"
             android:id="@+id/details_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,6 +28,7 @@
             android:textSize="16sp" />
 
         <TextView
+            android:textColor="@color/secondaryText"
             android:id="@+id/details_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
