--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -65,6 +65,7 @@
                             android:layout_height="wrap_content">
 
                             <TextView
+                                android:textColor="@color/secondaryText"
                                 android:id="@+id/home_city_name"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -72,6 +73,7 @@
                                 tools:text="Rio de Janeiro" />
 
                             <TextView
+                                android:textColor="@color/secondaryText"
                                 android:id="@+id/home_weather_description"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -84,6 +86,7 @@
                                 android:orientation="horizontal">
 
                                 <TextView
+                                    android:textColor="@color/secondaryText"
                                     android:id="@+id/home_temperature"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -105,6 +108,7 @@
                     </android.support.v7.widget.CardView>
 
                     <android.support.v7.widget.CardView
+                        android:background="@color/background"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/card_margin"
@@ -125,6 +129,7 @@
                     </android.support.v7.widget.CardView>
 
                     <android.support.v7.widget.CardView
+                        android:background="@color/background"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/card_margin"
